--- a/spring101/pom.xml
+++ b/spring101/pom.xml
@@ -96,7 +96,19 @@
 				</configuration>
 				<executions>
 					<execution>
-						<id>drop-db-before-test-if-any</id>
+						<id>drop-schema-before-test-if-any</id>
+						<phase>process-test-resources</phase>
+						<goals>
+							<goal>execute</goal>
+						</goals>
+						<configuration>
+							<autocommit>true</autocommit>
+							<sqlCommand>drop schema TEST</sqlCommand>
+							<onError>continue</onError>
+						</configuration>
+					</execution>
+					<execution>
+						<id>create-schema</id>
 						<phase>process-test-resources</phase>
 						<goals>
 							<goal>execute</goal>
