--- a/spring101/src/main/resources/jdbc.properties
+++ b/spring101/src/main/resources/jdbc.properties
@@ -1,4 +1,4 @@
-jdbc.url=jdbc:h2:~/h2_database/test
+jdbc.url=jdbc:h2:tcp://localhost/~/h2_database/test
 jdbc.driver=org.h2.Driver
 jdbc.user=user
 jdbc.password=password
